OHIF-117 Bugfix: Study list overlaps in firefox

--- a/Packages/worklist/client/components/worklistResult/worklistResult.styl
+++ b/Packages/worklist/client/components/worklistResult/worklistResult.styl
@@ -71,6 +71,7 @@ $bodyCellHeight = 40px
         th
           padding: 0
           border-bottom: solid 1px #6fbde2
+          width: 100%
 
           &:first-child
             padding-left: $tablePadding
